--- a/env.yaml.sample
+++ b/env.yaml.sample
@@ -6,6 +6,10 @@ commonSecret: ""
 mastodon:
   vapidPrivateKey: ""
   vapidPublicKey: ""
+  activeRecordEncryption:
+    primaryKey: ""
+    deterministicKey: ""
+    keyDerivationSalt: ""
 
 blueskyPds:
   # openssl rand --hex 16
